[package]
name = "serve-ex"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
regex = "1.10.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_with = "3.8.3"
time = "0.3.36"
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "serde"] }

[dev-dependencies]
serde_test = "1.0.176"
